appointmentscheduler/force-app/main/default/objects/Google_API_Credential__c/Google_API_Credential__c.object-meta.xml
<CustomObject>
    <label>Google API Credential</label>
    <nameField>
        <displayFormat>GAPI-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Google API Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>