appointmentscheduler/force-app/main/default/objects/Google_API_Credential__c/fields/Expires_In__c.field-meta.xml
<CustomField>
    <fullName>Expires_In__c</fullName>
    <label>Expires In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>