appointmentscheduler/force-app/main/default/objects/Google_API_Credential__c/fields/IssuedAt__c.field-meta.xml
<CustomField>
    <fullName>IssuedAt__c</fullName>
    <label>IssuedAt</label>
    <type>DateTime</type>
</CustomField>