appointmentscheduler/force-app/main/default/objects/Google_API_Credential__c/fields/Physician__c.field-meta.xml
<CustomField>
    <fullName>Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Physician</label>
    <referenceTo>Physician__c</referenceTo>
    <relationshipLabel>Google API Credentials</relationshipLabel>
    <relationshipName>Google_API_Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>